# nl2protocol

./: .gitignore  4human.md  LICENSE  README.md  app.py  cli.py  lab_config.json  models.py  parser.py  pyproject.toml  requirements.txt  robot_config.example.json  robot_config.json  setup.cfg  test_models.py  thoughts.txt
config_examples/: lab_config.example.json  lab_config.modules.json
configs/: plate_replication_config.json  reagent_distribution_config.json  serial_dilution_config.json
data/: serial_dilution.csv
data_curation/: README.md  intent_generator.py  run_pipeline.py  script_parser.py
data_curation/examples_backup_original/: ex_casual_00ddfc60.json  ex_casual_01132de6.json  ex_casual_01b6c6e2.json  ex_casual_0346980d.json  ex_casual_03ddbc04.json  ex_casual_0412154c.json  ex_casual_0420af8f.json  ex_casual_04f1e1d9.json  ex_casual_04fb33ce.json  ex_casual_0525ad94.json  ex_casual_05452ce0.json  ex_casual_0591659c.json  ex_casual_0665c9cb.json  ex_casual_066d0b31.json  ex_casual_072a6b4b.json  ex_casual_0777d734.json  ex_casual_07deb0a4.json  ex_casual_086dc8b6.json  ex_casual_08aa80aa.json  ex_casual_093d4eb8.json  ex_casual_0956a473.json  ex_casual_0a90cbcf.json  ex_casual_0b3f5def.json  ex_casual_0cbebcf0.json  ex_casual_0cc2acbc.json  ex_casual_0cdb82a3.json  ex_casual_0d4c7667.json  ex_casual_0d7fdf02.json  ex_casual_0dacec86.json  ex_casual_0ded9f98.json  ex_casual_0ed1a711.json  ex_casual_0ee6b4ea.json  ex_casual_0fa87f4e.json  ex_casual_0fd59a2e.json  ex_casual_10355e8e.json  ex_casual_10b07ffc.json  ex_casual_11231f28.json  ex_casual_11f3687b.json  ex_casual_11f94bde.json  ex_casual_142293fd.json  (+1475 more)
data_curation/schema_to_nl/: __init__.py  nl_generator.py  pattern_detector.py  run_regeneration.py  schema_analyzer.py
demo_protocols/: README.md
demo_protocols/bradford_assay/: config.json
demo_protocols/cell_seeding/: instruction.txt
demo_protocols/plasmid_miniprep/: config.json  instruction.txt
demo_protocols/western_blot_prep/: config.json  instruction.txt
docs/: TESTING.md  task6-confirmation-ux.md
evals/: README.md  run.py
examples/: README.md
nl2protocol/: __init__.py  __main__.py  app.py  cli.py  colors.py  config.py  config_generator.py  confirmation.py  constraints.py  errors.py  example_store.py  extractor.py  input_validator.py  models.py  parser.py  pipeline.py  reporting.py  robot.py  spinner.py  validate_config.py  validation.py
notes/: cli_ux_plan.md  protocol_specification_architecture.md
scripts/: add_configs_to_examples.py  analyze_rag_examples.py  regenerate_intents.py  run_all_tests.py  run_all_tests.sh
test_cases/: README.md
tests/: test_boundaries.py  test_config.py  test_confirmation.py  test_confirmation_grouping.py  test_constraints.py  test_errors.py  test_failure_modes.py  test_fill_lookup_and_carryover_gaps.py  test_gap_resolution_detectors.py  test_gap_resolution_orchestrator.py  test_gap_resolution_suggesters.py  test_gap_resolution_types.py  test_input_validator.py  test_labware.py  test_models.py  test_reporting.py  test_spec_validators.py  test_tip_strategy.py  test_validate_config.py
(+359 files in other folders)
