[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nl2protocol"
version = "0.1.0"
description = "Convert natural language to Opentrons robot protocols using Gemini LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["opentrons", "robotics", "llm", "protocol", "laboratory", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.0.0",
    "google-generativeai>=0.8.0",
    "opentrons>=8.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
nl2protocol = "nl2protocol.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/nl2protocol"
Repository = "https://github.com/yourusername/nl2protocol"

[tool.hatch.build.targets.wheel]
packages = ["nl2protocol"]
